# llm-cost-carbon-budget

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  package.json  pyproject.toml
docs/: PROBLEM.md
site/: index.html
src/: cli.js  index.js
src/llm_cost_carbon_budget/: __init__.py
tests/: test_smoke.py
